# 3d-renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  application.cpp  application.h  main.cpp  obj_parser.cpp  readme.md  test.cpp
include/renderer/: CMakeLists.txt  application.cpp  application.h  camera.cpp  flat_primitives.cpp  flat_primitives.h  primitives.cpp  primitives.h  renderer.cpp  screen.cpp  screen.h  world.cpp  world.h
primitives/: Pixel.cpp
src/: application.cpp  application.h  camera.cpp  camera.h  flat_primitives.cpp  flat_primitives.h  parsers.cpp  parsers.h  primitives.cpp  primitives.h  renderer.cpp  renderer.h  screen.cpp  screen.h  test.cpp  world.cpp  world.h
